# humanpc

./: .gitignore  CHANGELOG.md  GAP_ANALYSIS.md  README.md  pyproject.toml
docs/: BUILD_PHASES.md  PLAN.md
docs/blueprint/: human_interaction_layer_blueprint.md
examples/: notepad_live.py  phase0_smoke.py  record_replay.py  system_demo.py  targeting_demo.py  visualize_mouse.py
examples/flows/: notepad.yaml
humanpc/: __init__.py  bot.py  cli.py  config.py  dispatch.py  exceptions.py  geometry.py  validation.py
humanpc/flows/: __init__.py  record.py  runner.py
humanpc/hil/: __init__.py  behavior.py  idle.py  individual.py  precise.py  scroll.py  session.py  timing.py
humanpc/hil/mouse/: __init__.py  bezier.py  engine.py  jitter.py  noise.py  overshoot.py  step.py  velocity.py
humanpc/hil/typing/: __init__.py  dwell.py  engine.py  errors.py  keys.py  pause.py  speed.py
humanpc/input/: __init__.py  driver.py  pyautogui_driver.py  sendinput_driver.py
humanpc/perception/: __init__.py  dpi.py  screen.py
humanpc/safety/: __init__.py  audit.py  guard.py  killswitch.py
humanpc/server/: __init__.py  http.py  mcp_server.py
humanpc/system/: __init__.py  apps.py  clipboard.py  shell.py
humanpc/targeting/: __init__.py  accessibility.py  ocr.py  parse.py  resolver.py  template.py  types.py
humanpc/windows/: __init__.py  manager.py  win32_backend.py
tests/: test_apps.py  test_behavior.py  test_bot_dryrun.py  test_bot_system.py  test_bot_targeting.py  test_cli.py  test_clipboard.py  test_config.py  test_dispatch.py  test_findall.py  test_flows.py  test_geometry.py  test_hil_mouse.py  test_hil_mouse_realism.py  test_hil_scroll.py  test_hil_typing.py  test_hil_typing_realism.py  test_idle.py  test_individuality.py  test_macros.py  test_modalities.py  test_ocr_find.py  test_paint_apple_live.py  test_parse_target.py  test_precise.py  test_provenance.py  test_resolver.py  test_safety.py  test_sendinput.py  test_server_http.py  test_shell.py  test_targeting_types.py  test_template_find.py  test_timing_cognition.py  test_validation.py  test_verification.py  test_windows.py
winval/: README.md  demo_moves.py  val_a2_smoke.py  val_a_boundary.py  val_a_smoke.py  val_bc_boundary.py  val_bcf.py  val_d_timer.py  val_desktop_probe.py  val_detector.py  val_e_relmouse.py  val_end_glitch.py  val_path_capture.py  val_relative_feel.py  val_velocity_profile.py  winhook.py
